# django-multi-tenant

./: LICENCE  README.rst  setup.cfg
multi_tenant/celery/: __init__.py  scheduler.py  task_class.py  utils.py
multi_tenant/db/: __init__.py  database_alias.py  routers.py  transaction.py  utils.py
multi_tenant/files/: __init__.py  upload_handler.py
multi_tenant/management/commands/: migrateall.py  tenant_aware_command.py
multi_tenant/middleware/: __init__.py  local_database_alias.py  thread_local.py
multi_tenant/redis/: __init__.py  key_function.py
